[package]
name = "quant-circuit"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
anyhow = "1"
candle = { package = "candle-core", version = "0.10.2" }
candle-nn = "0.10.2"
candle-transformers = { version = "0.10.2", default-features = false }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
hf-hub = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.22.0", default-features = false, features = ["onig"] }
